// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description components snapshot 1`] = `
<DocumentFragment>
  <div
    variant="styles.p"
  >
    Markdown descripton for component.
# With a heading
and some bold 
    <strong>
      text
    </strong>
  </div>
</DocumentFragment>
`;

exports[`Description overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 8px;
  margin-bottom: 8px;
}

<p
    class="emotion-0"
  >
    Markdown descripton for component.
# With a heading
and some bold 
    <strong>
      text
    </strong>
  </p>
</DocumentFragment>
`;
